@@ -1,0 +1,27 @@
+{
+  "alias": "get-python-venv",
+  "automation_alias": "script",
+  "automation_uid": "5b4e0237da074764",
+  "cache": true,
+  "clean_files": [],
+  "deps": [
+    {
+      "tags": "set,echo-off,win"
+    },
+    {
+      "tags": "get,python"
+    }
+  ],
+  "post_deps": [
+    {
+      "tags": "get,python",
+      "names" : ["register-python"]
+    }
+  ],
+  "tags": [
+    "get",
+    "get-python-venv",
+    "python-venv"
+  ],
+  "uid": "7633ebada4584c6c"
+}
