@@ -1,5 +1,5 @@
 {
-  "alias": "get-virtual-env",
+  "alias": "get-python-venv",
   "automation_alias": "script",
   "automation_uid": "5b4e0237da074764",
   "cache": true,
@@ -14,17 +14,15 @@
   ],
   "post_deps": [
     {
-      "tags": "get,python",
       "new": true,
-      "skip_cache": true
+      "skip_cache": true,
+      "tags": "get,python"
     }
   ],
   "tags": [
     "get",
-    "virtual-env",
-    "venv",
-    "get-venv",
-    "get-virtual-env"
+    "get-python-venv",
+    "python-venv"
   ],
   "uid": "7633ebada4584c6c"
 }
