@@ -7,6 +7,10 @@ def preprocess(i):
 
     env = i['env']
 
+    meta = i['meta']
+
+    quiet = (env.get('CM_TMP_QUIET', False) == 'yes')
+
     automation = i['automation']
 
     recursion_spaces = i['recursion_spaces']
@@ -19,7 +23,23 @@ def preprocess(i):
     env['CM_TMP_PATH'] = env['CM_VIRTUAL_ENV_SCRIPTS_PATH']
     env['CM_TMP_FAIL_IF_NOT_FOUND'] = 'yes'
 
-    return {'return':0}
+    # Add extra tags to python
+    add_extra_cache_tags = [] # for this script
+    add_python_extra_cache_tags = ['virtual'] # for get-python script
+
+    name = env.get('CM_NAME','')
+    if name != '':
+        name_tag = name.lower()
+
+        add_extra_cache_tags.append(name)
+        add_python_extra_cache_tags.append(name)
+
+    r = automation.update_deps({'deps':meta['post_deps'], 
+                                'update_deps':{'register-python':
+                                   {'extra_cache_tags':','.join(add_python_extra_cache_tags)}}})
+    if r['return']>0: return r
+
+    return {'return':0, 'add_extra_cache_tags':add_extra_cache_tags}
 
 def postprocess(i):
 
@@ -41,5 +61,12 @@ def postprocess(i):
 
     script_prefix.append(s)
     state['script_prefix'] = script_prefix
+
+    # clean PYTHON env from the first deps (get-python)
+    # otherwise not considered as new
+
+    for k in list(env.keys()):
+        if k.startswith('CM_PYTHON_'):
+            del(env[k])
 
     return {'return':0}
